# KnowledgeBase

./: .gitignore  C++ code-style.md  C++.md  CMake.md  GitNotes.md  LICENSE  Latex.md  README.md  UbuntuNotes.md  anaconda.md  gdb.md  gitNote.txt  gitlab.md  python.md  python.py  readPapers.md  robotics.md  ros.md  server.md  shell.md  software.md  tools.md  vscode.md
cmake-3.25.0-rc3-tutorial-source/Step10StaticOrSharedLib/: CMakeLists.txt  tutorial.cxx
cmake-3.25.0-rc3-tutorial-source/Step10StaticOrSharedLib/MathFunctions/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step11ExportConfiguration/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step11ExportConfiguration/MathFunctions/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step12DebugRelease/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step12DebugRelease/MathFunctions/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step1StartingPoint/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake-3.25.0-rc3-tutorial-source/Step2AddingALibrary/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake-3.25.0-rc3-tutorial-source/Step2AddingALibrary/MathFunctions/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step3UsageRequirements/: CMakeLists.txt  TutorialConfig.h.in
cmake-3.25.0-rc3-tutorial-source/Step3UsageRequirements/MathFunctions/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step4GeneratorExpression/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step4GeneratorExpression/MathFunctions/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step5InstallingTesting/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step5InstallingTesting/MathFunctions/: CMakeLists.txt
cmake-3.25.0-rc3-tutorial-source/Step6TestingDashBoard/: CMakeLists.txt  CTestConfig.cmake
cmake-3.25.0-rc3-tutorial-source/Step7SystemIntrospection/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake-3.25.0-rc3-tutorial-source/Step8AddingCommandGeneratedFile/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake-3.25.0-rc3-tutorial-source/Step9PackingInstalling/: CMakeLists.txt
doxygen_config/: Doxygen.config
easylogging/: easylogging.md
machine learning/: matplotlib.ipynb  numpy.ipynb  pandas.ipynb  python.ipynb  python.md  pytorch.md  random simulation.ipynb  scipy.ipynb  spam detection example.ipynb
machine learning/data/: amager_observations.csv
performance analysis/: perf.md  process_data.sh
robotics/: C++.md  CMake.md  a beautiful projrct.md  boost.md  robotics.md
scripts/: log_monitor.py
scripts/python/: filter.py  plot_traj.py
scripts/shell/: log_monitor.sh  record_process_info.sh  rosbag_filter.sh  run_all_nodes.sh
tensorRT/: quantilization.md  tensorRTGuide.md
working experiences/: wicri.md
